[gd_scene load_steps=23 format=3 uid="uid://bp5v5xxbheinb"]

[ext_resource type="PackedScene" uid="uid://j0spv2qvop3u" path="res://cenas/player.tscn" id="1_fjghe"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_u6t0n"]
[ext_resource type="Script" path="res://cenas/LevelController.gd" id="2_1qbbs"]
[ext_resource type="FontFile" uid="uid://okptm2esfkrd" path="res://sprites/Fonts/PressStart2P-Regular.ttf" id="2_ho3d7"]
[ext_resource type="Texture2D" uid="uid://75m2jrmlgn7b" path="res://sprites/GUI/avatar.png" id="3_ar52p"]
[ext_resource type="PackedScene" uid="uid://dtq1t3yhbxpwq" path="res://map/map2/FirstMap.tscn" id="3_fjh3o"]
[ext_resource type="StyleBox" uid="uid://brxn2h182wv2s" path="res://styles/game.tres" id="5_333jj"]
[ext_resource type="PackedScene" uid="uid://cx4vmp4ojrcv0" path="res://cenas/cogumelo.tscn" id="8_piuq8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n8pa"]
bg_color = Color(0.490196, 0.631373, 0.752941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwiw7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3rfq"]
bg_color = Color(0.776471, 0.780392, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ja5ko"]
bg_color = Color(0, 0.831373, 0.768627, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttm5a"]
bg_color = Color(0.913725, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlugn"]
bg_color = Color(0.0352941, 0.721569, 0.243137, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvspl"]
bg_color = Color(0.0980392, 0.705882, 0.498039, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="Theme" id="Theme_iwdqs"]
default_font = ExtResource("2_ho3d7")

[sub_resource type="Theme" id="Theme_xuv4m"]

[sub_resource type="Curve2D" id="Curve2D_w51a0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -431, -346, 0, 0, 0, 0, 18, -348, 0, 0, 0, 0, 20, -345, 0, 0, 0, 0, 16, -71, 0, 0, 0, 0, 290, -74, 0, 0, 0, 0, 300, 205, 0, 0, 0, 0, 299, 207, 0, 0, 0, 0, -218, 208, 0, 0, 0, 0, -228, 51, 0, 0, 0, 0, -425, 46, 0, 0, 0, 0, -431, -346)
}
point_count = 11

[sub_resource type="Curve2D" id="Curve2D_r0k7s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 760, -150, 0, 0, 0, 0, 1339, -157, 0, 0, 0, 0, 1339, 278, 0, 0, 0, 0, 762, 283, 0, 0, 0, 0, 758, 242, 0, 0, 0, 0, 548, 241, 0, 0, 0, 0, 547, -55, 0, 0, 0, 0, 759, -62, 0, 0, 0, 0, 760, -150)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_meghi"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 55.2734, -375.018, 0, 0, 0, 0, 486.713, -364.226, 0, 0, 0, 0, 488.248, -159.18, 0, 0, 0, 0, 812.212, -153.784, 0, 0, 0, 0, 809.141, 99.825, 0, 0, 0, 0, 1308.14, 97.127, 0, 0, 0, 0, 1303.53, 655.607, 0, 0, 0, 0, 494.39, 652.909, 0, 0, 0, 0, 494.39, 296.777, 0, 0, 0, 0, 18.4245, 299.475, 0, 0, 0, 0, 15.3538, 1044.11, 0, 0, 0, 0, -417.621, 1017.13, 0, 0, 0, 0, -409.944, -21.5837, 0, 0, 0, 0, -159.679, -8.09387, 0, 0, 0, 0, -167.355, -148.388, 0, 0, 0, 0, 59.8796, -142.992, 0, 0, 0, 0, 55.2734, -375.018)
}
point_count = 17

[sub_resource type="Curve2D" id="Curve2D_tjfee"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -447, -365, 0, 0, 0, 0, -342, 0, 0, 0, 0, 0, -326, -323, 0, 0, 0, 0, -205, -1, 0, 0, 0, 0, -69, -293, 0, 0, 0, 0, -74, 15, 0, 0, 0, 0, -180, 199, 0, 0, 0, 0, 29, 191, 0, 0, 0, 0, -16, -51, 0, 0, 0, 0, 148, -38, 0, 0, 0, 0, 123, 168, 0, 0, 0, 0, 201, 166, 0, 0, 0, 0, 238, -48, 0, 0, 0, 0, 284, -64, 0, 0, 0, 0, 312, 181, 0, 0, 0, 0, -447, -365)
}
point_count = 16

[sub_resource type="Curve2D" id="Curve2D_mp0fc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 556, -43, 0, 0, 0, 0, 775, -41, 0, 0, 0, 0, 846, -121, 0, 0, 0, 0, 823, 42, 0, 0, 0, 0, 654, 83, 0, 0, 0, 0, 599, 125, 0, 0, 0, 0, 589, 191, 0, 0, 0, 0, 685, 191, 0, 0, 0, 0, 876, 191, 0, 0, 0, 0, 952, 52, 0, 0, 0, 0, 974, -129, 0, 0, 0, 0, 1088, -129, 0, 0, 0, 0, 1156, -66, 0, 0, 0, 0, 1123, 52, 0, 0, 0, 0, 1115, 153, 0, 0, 0, 0, 1050, 241, 0, 0, 0, 0, 785, 239, 0, 0, 0, 0, 1219, 244, 0, 0, 0, 0, 1304, -13, 0, 0, 0, 0, 1304, -111, 0, 0, 0, 0, 556, -43)
}
point_count = 21

[node name="Game" type="Node2D"]
script = ExtResource("1_u6t0n")

[node name="LevelController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_1qbbs")

[node name="GameTimer" type="Timer" parent="LevelController"]
unique_name_in_owner = true
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfoBox" type="Panel" parent="GUI/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 110.0
offset_bottom = 46.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5n8pa")

[node name="AvatarFrame" type="Panel" parent="GUI/Control/PlayerInfoBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -14.5
offset_right = 34.0
offset_bottom = 14.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iwiw7")

[node name="TextureRect" type="TextureRect" parent="GUI/Control/PlayerInfoBox/AvatarFrame"]
texture_filter = 1
layout_mode = 0
offset_left = -7.0
offset_top = -8.0
offset_right = 40.0
offset_bottom = 39.0
texture = ExtResource("3_ar52p")
expand_mode = 1

[node name="PlayerStamina" type="ProgressBar" parent="GUI/Control/PlayerInfoBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -3.5
offset_right = -3.0
offset_bottom = 1.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_o3rfq")
theme_override_styles/fill = SubResource("StyleBoxFlat_ja5ko")
value = 100.0
show_percentage = false

[node name="PlayerHealth" type="ProgressBar" parent="GUI/Control/PlayerInfoBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -14.5
offset_right = -3.0
offset_bottom = -9.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ttm5a")
theme_override_styles/fill = SubResource("StyleBoxFlat_mlugn")
value = 100.0
show_percentage = false

[node name="Score" type="Label" parent="GUI/Control/PlayerInfoBox"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 3.5
offset_top = 27.0
offset_right = 46.5
offset_bottom = 35.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="HP" type="Label" parent="GUI/Control/PlayerInfoBox"]
layout_mode = 0
offset_left = 37.0
offset_top = 6.0
offset_right = 53.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 8
text = "HP"

[node name="XP" type="Label" parent="GUI/Control/PlayerInfoBox"]
layout_mode = 0
offset_left = 37.0
offset_top = 27.0
offset_right = 53.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 8
text = "XP"

[node name="SP" type="Label" parent="GUI/Control/PlayerInfoBox"]
layout_mode = 0
offset_left = 37.0
offset_top = 17.0
offset_right = 53.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 8
text = "SP"

[node name="ScoreTimer" type="Timer" parent="GUI/Control"]
unique_name_in_owner = true

[node name="PauseButton" type="Button" parent="GUI/Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = 30.0
grow_horizontal = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_333jj")
theme_override_styles/hover = SubResource("StyleBoxFlat_xvspl")
action_mode = 0
text = "Pause"

[node name="Timer" type="Label" parent="GUI/Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = 7.0
offset_right = 21.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("5_333jj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="Control" type="Control" parent="PauseScreen"]
layout_mode = 3
anchors_preset = 0
offset_right = 644.0
offset_bottom = 364.0

[node name="Fundo" type="ColorRect" parent="PauseScreen/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="MenuBox" type="Panel" parent="PauseScreen/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -62.0
offset_right = 81.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_iwdqs")
theme_override_styles/panel = ExtResource("5_333jj")

[node name="PauseText" type="Label" parent="PauseScreen/Control/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 9.0
offset_right = 44.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Game Paused"

[node name="RestartGameButton" type="Button" parent="PauseScreen/Control/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -28.0
offset_right = 32.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "Restart"
flat = true
icon_alignment = 1

[node name="ContinueButton" type="Button" parent="PauseScreen/Control/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -8.0
offset_right = 36.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = SubResource("Theme_xuv4m")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "Continue"
flat = true
icon_alignment = 1
expand_icon = true

[node name="ExitGameButton" type="Button" parent="PauseScreen/Control/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "Exit"
flat = true
icon_alignment = 1
expand_icon = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="Fundo" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="MenuBox" type="Panel" parent="GameOverScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -62.0
offset_right = 81.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_iwdqs")
theme_override_styles/panel = ExtResource("5_333jj")

[node name="GameOverText" type="Label" parent="GameOverScreen/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 7.0
offset_right = 36.0
offset_bottom = 15.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Game Over
"

[node name="RestartGameButton" type="Button" parent="GameOverScreen/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -28.0
offset_right = 32.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "Restart"
flat = true
icon_alignment = 1

[node name="ExitGameButton" type="Button" parent="GameOverScreen/MenuBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ho3d7")
theme_override_font_sizes/font_size = 8
text = "Exit"
flat = true
icon_alignment = 1
expand_icon = true

[node name="FirstMap" parent="." instance=ExtResource("3_fjh3o")]

[node name="Player" parent="." instance=ExtResource("1_fjghe")]
unique_name_in_owner = true
position = Vector2(-208, -245)
RUN_SPEED = 80.0

[node name="Paredes" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Paredes"]
polygon = PackedVector2Array(-473, 88, -260, 88, -260, 245, 75, 243, 75, 602, -38, 587, -38, 1003, 264, 1002, 261, 727, 554, 729, 553, 863, 1096, 860, 1094, 634, 774, 634, 775, 537, 565, 539, 567, 458, 267, 458, 267, 537, 122, 538, 120, 587, 100, 599, 100, 236, 325, 245, 326, 109, 327, 100, 540, 98, 541, 259, 747, 260, 748, 293, 1349, 292, 1349, -166, 746, -165, 748, -68, 538, -70, 539, 64, 539, 71, 325, 70, 322, -99, 53, -99, 52, -387, -471, -389, -472, 88, -606, 83, -611, -400, -606, -657, 1410, -657, 1410, 1253, -610, 1253, -607, 89)

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.6
autostart = true

[node name="MobSpawners" type="Node" parent="."]

[node name="Path2DAreaOne" type="Path2D" parent="MobSpawners"]
curve = SubResource("Curve2D_w51a0")

[node name="PathFollow2DAreaOne" type="PathFollow2D" parent="MobSpawners/Path2DAreaOne"]
unique_name_in_owner = true
position = Vector2(-163.854, -347.19)
rotation = -0.00445431
progress = 267.148

[node name="Path2DAreaTwo" type="Path2D" parent="MobSpawners"]
curve = SubResource("Curve2D_r0k7s")

[node name="PathFollow2DAreaTwo" type="PathFollow2D" parent="MobSpawners/Path2DAreaTwo"]
unique_name_in_owner = true
position = Vector2(1318.76, 278.175)
rotation = 3.13293
progress = 1034.12

[node name="Path2D2AreaThree" type="Path2D" parent="MobSpawners"]
position = Vector2(240, 605)
scale = Vector2(0.651308, 0.370649)
curve = SubResource("Curve2D_meghi")

[node name="PathFollow2DAreaThree" type="PathFollow2D" parent="MobSpawners/Path2D2AreaThree"]
unique_name_in_owner = true
position = Vector2(55.2734, -375.018)
rotation = 0.0250087

[node name="CogumeloSpawners" type="Node" parent="."]

[node name="CogumeloTimer" type="Timer" parent="CogumeloSpawners"]
wait_time = 15.0
autostart = true

[node name="CogumeloSpawner" type="Path2D" parent="CogumeloSpawners"]
curve = SubResource("Curve2D_tjfee")

[node name="CogumeloPosi1" type="PathFollow2D" parent="CogumeloSpawners/CogumeloSpawner"]
unique_name_in_owner = true
position = Vector2(-447, -365)
rotation = 1.29069

[node name="CogumeloSpawner2" type="Path2D" parent="CogumeloSpawners"]
curve = SubResource("Curve2D_mp0fc")

[node name="CogumeloPosi2" type="PathFollow2D" parent="CogumeloSpawners/CogumeloSpawner2"]
unique_name_in_owner = true
position = Vector2(556, -43)
rotation = 0.00913217

[node name="Cogumelo" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-231, -21)

[node name="Cogumelo2" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-260, -54)

[node name="Cogumelo3" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-191, -173)

[node name="Cogumelo4" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-217, -126)

[node name="Cogumelo5" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-168, -104)

[node name="Cogumelo6" parent="." instance=ExtResource("8_piuq8")]
position = Vector2(-154, -217)

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="LevelController/GameTimer" to="LevelController" method="_on_game_timer_timeout"]
[connection signal="timeout" from="GUI/Control/ScoreTimer" to="LevelController" method="_on_score_timer_timeout"]
[connection signal="pressed" from="GUI/Control/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseScreen/Control/MenuBox/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="PauseScreen/Control/MenuBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseScreen/Control/MenuBox/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="GameOverScreen/MenuBox/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="GameOverScreen/MenuBox/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="vida_terminou" from="Player" to="." method="_on_player_vida_terminou"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="CogumeloSpawners/CogumeloTimer" to="." method="_on_cogumelo_timer_timeout"]
